fixed scrollbar thing

--- a/client/app/components/courseContent/courseContent.scss
+++ b/client/app/components/courseContent/courseContent.scss
@@ -7,7 +7,7 @@ $height-button-banner: rem_calc(45px);
 $tick-size: 3rem;
 
 .course-content {
-  margin-top: rem_calc(20px);
+  padding-top: rem_calc(20px);
   min-height: calc(100vh - #{$height-footer-nav-banner});
   display: flex;
   flex-direction: column;
